# nbody_demo

./: .hgignore  AndiTest.22995.out  AndiTest.37921.out  CMakeLists.txt  interactor_avx.hpp  interactor_avx_swapped.hpp  interactor_mic.hpp  interactor_mic_swapped.hpp  interactor_qpx_swapped.hpp  interactor_scalar.hpp  interactor_scalar_swapped.hpp  interactor_sse.hpp  interactor_sse_swapped.hpp  jobscript.sh  jobscript_serial.sh  jobscript_strong1.sh  jobscript_strong16384.sh  jobscript_strong2.sh  jobscript_strong2048.sh  jobscript_strong4096.sh  jobscript_strong512.sh  jobscript_strong8.sh  jobscript_weak1.sh  jobscript_weak10000.sh  jobscript_weak128.sh  jobscript_weak4096.sh  jobscript_weak8192.sh  main.cpp  main_serial1.cpp  main_serial2.cpp  main_strong.cpp  main_weak.cpp  nbody_container.hpp  nbody_initializer.hpp  parse  run_simulation.hpp  run_simulation_parallel.hpp  strong.23007.out  strong.23008.out  strong.23010.out  (+60 more)
.hg/: dirstate  hgrc  last-message.txt  undo.desc
.hg/cache/: branch2-served
.hg/store/: 00changelog.i  00manifest.i  fncache
.hg/store/data/: _andi_test.22995.out.i  _andi_test.37920.out.i  _andi_test.37921.out.i  _c_make_lists.txt.i  interactor__avx.hpp.i  interactor__avx__swapped.hpp.i  interactor__mic.hpp.i  interactor__mic__swapped.hpp.i  interactor__qpx__swapped.hpp.i  interactor__scalar.hpp.i  interactor__scalar__swapped.hpp.i  interactor__sse.hpp.i  interactor__sse__swapped.hpp.i  jobscript.sh.i  jobscript__serial1.sh.i  jobscript__serial2.sh.i  jobscript__strong1.sh.i  jobscript__strong10000.sh.i  jobscript__strong1024.sh.i  jobscript__strong128.sh.i  jobscript__strong16.sh.i  jobscript__strong16384.sh.i  jobscript__strong2.sh.i  jobscript__strong2048.sh.i  jobscript__strong256.sh.i  jobscript__strong28672.sh.i  jobscript__strong32.sh.i  jobscript__strong4.sh.i  jobscript__strong4096.sh.i  jobscript__strong512.sh.i  jobscript__strong64.sh.i  jobscript__strong8.sh.i  jobscript__strong8192.sh.i  jobscript__weak1.sh.i  jobscript__weak10000.sh.i  jobscript__weak1024.sh.i  jobscript__weak128.sh.i  jobscript__weak16.sh.i  jobscript__weak16384.sh.i  jobscript__weak2.sh.i  (+173 more)
.hg/store/data/juqueen/: _andi_test.22995.out.i  _andi_test.37920.out.i  _andi_test.37921.out.i  jobscript.sh.i  jobscript__serial.sh.i  jobscript__serial1.sh.i  jobscript__serial2.sh.i  jobscript__strong1.sh.i  jobscript__strong10000.sh.i  jobscript__strong1024.sh.i  jobscript__strong128.sh.i  jobscript__strong16.sh.i  jobscript__strong16384.sh.i  jobscript__strong2.sh.i  jobscript__strong2048.sh.i  jobscript__strong256.sh.i  jobscript__strong28672.sh.i  jobscript__strong32.sh.i  jobscript__strong4.sh.i  jobscript__strong4096.sh.i  jobscript__strong512.sh.i  jobscript__strong64.sh.i  jobscript__strong8.sh.i  jobscript__strong8192.sh.i  jobscript__weak1.sh.i  jobscript__weak10000.sh.i  jobscript__weak1024.sh.i  jobscript__weak128.sh.i  jobscript__weak16.sh.i  jobscript__weak16384.sh.i  jobscript__weak2.sh.i  jobscript__weak2048.sh.i  jobscript__weak256.sh.i  jobscript__weak28672.sh.i  jobscript__weak32.sh.i  jobscript__weak4.sh.i  jobscript__weak4096.sh.i  jobscript__weak512.sh.i  jobscript__weak64.sh.i  jobscript__weak8.sh.i  (+139 more)
.hg/store/data/juqueen/logs/: _andi_test.22995.out.i  _andi_test.31451.out.i  _andi_test.37920.out.i  _andi_test.37921.out.i  strong.22997.out.i  strong.23000.out.d  strong.23000.out.i  strong.23001.out.d  strong.23001.out.i  strong.23002.out.i  strong.23003.out.i  strong.23004.out.i  strong.23005.out.d  strong.23005.out.i  strong.23006.out.i  strong.23007.out.i  strong.23008.out.i  strong.23009.out.d  strong.23009.out.i  strong.23010.out.i  strong.23011.out.i  strong.23012.out.i  strong.23013.out.d  strong.23013.out.i  strong.23014.out.i  strong.23843.out.i  strong.37456.out.d  strong.37456.out.i  strong.37457.out.d  strong.37457.out.i  strong.37458.out.i  strong.37459.out.i  strong.37460.out.i  strong.37461.out.i  strong.37462.out.d  strong.37462.out.i  strong.37463.out.i  strong.37464.out.i  strong.37465.out.i  strong.37466.out.d  (+78 more)
.hg/store/data/logs/: _andi_test.31451.out.i
.hg/store/data/stampede/: generate__jobscripts__weak.sh.i  nbody__weak__hpx__mic__1.job.i  print__gflops.sh.i
juqueen/: jobscript_serial2.sh  jobscript_strong10000.sh  jobscript_strong1024.sh  jobscript_strong128.sh  jobscript_strong16.sh  jobscript_strong256.sh  jobscript_strong28672.sh  jobscript_strong32.sh  jobscript_strong4.sh  jobscript_strong64.sh  jobscript_strong8192.sh  jobscript_weak2.sh  jobscript_weak2048.sh  jobscript_weak32.sh  jobscript_weak4.sh  jobscript_weak64.sh  jobscript_weak8.sh  parse  strong.23003.out  strong.23012.out  strong.37458.out  strong.37464.out  strong.37469.out  strong.37471.out  strong.37910.out  strong_scaling_parsed.txt  variance_jobscript_strong1.sh  variance_jobscript_strong16.sh  variance_jobscript_strong8.sh  variance_jobscript_weak1.sh  variance_jobscript_weak32.sh  variance_jobscript_weak8.sh  variance_strong.23848.out  variance_strong.txt  weak.23016.out  weak.23017.out  weak.23019.out  weak.23021.out  weak.23031.out  weak.23033.out  (+5 more)
juqueen/logs/: AndiTest.31451.out  AndiTest.37920.out  strong.22997.out  strong.23002.out  strong.23004.out  strong.23006.out  strong.23011.out  strong.23843.out  strong.37460.out  strong.37461.out  strong.37465.out  strong.37467.out  strong.37911.out  strong.37913.out  variance_strong.23844.out  variance_strong.23849.out  variance_strong.23850.out  variance_weak.23851.out  variance_weak.23852.out  variance_weak.23855.out  weak.23023.out  weak.23024.out  weak.23025.out  weak.23029.out  weak.23035.out  weak.23042.out  weak.23842.out  weak.37441.out  weak.37444.out  weak.37446.out  weak.37447.out  weak.37450.out  weak.37453.out  weak.37919.out
stampede/: generate_jobscripts_weak.sh  nbody_weak_hpx_mic_1.job  print_gflops.sh
